# CarSide

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AppDelegate.swift  BonjourDiscovery.swift  Build-CarSide.bat  CMakeCache.txt  CMakeLists.txt  CarSideServer.sln  CarSideServer.vcxproj  CarSideServer.vcxproj.filters  CarSideServer_main.cpp  FrameCaptureer.cpp  FrameCapturer.h  IMPLEMENTATION_SUMMARY.md  IddSampleDriver.cpp  Info.plist  InputCapture.swift  InputEvent.h  InputInjector.cpp  Install-Dependencies.bat  Install-Everything.bat  NvencEncoder.cpp  NvencEncoder.h  NvencEncoder_stub.cpp  Quick-Setup.bat  README.md  SETUP_GUIDE.md  ServerInitializer.cpp  Setup-CarSide.ps1  StreamClient.swift  StreamServer.cpp  StreamServer.h  VideoDecoder.swift  ViewController.swift  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mDNS
CarSideServer.dir/Release/: CarSideServer.exe.recipe
CarSideServer.dir/Release/CarSideServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
x64/Release/ALL_BUILD/: ALL_BUILD.recipe
x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
